--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-contrib-clean": "^0.4",
     "grunt-contrib-concat": "^0.3",
     "grunt-contrib-connect": "^0.7",
+    "grunt-contrib-copy": "^0.7",
     "grunt-contrib-jshint": "^0.6",
     "grunt-contrib-qunit": "^0.2",
     "grunt-contrib-uglify": "^0.2",
